# adventofcode2025

./: .gitignore  Cargo.toml  Jenkinsfile  README.md
.github/workflows/: rustci.yaml
aoc_common/: Cargo.toml
aoc_common/src/: lib.rs
benches/: all_days.rs  update-reports.ps1
day_eight/: Cargo.toml  README.md
day_eight/src/: dsu.rs  lib.rs  main.rs
day_eight/tests/: functional.rs
day_eleven/: Cargo.toml  README.md
day_eleven/src/: day_to_out.rs  lib.rs  main.rs  svr_to_out.rs
day_eleven/tests/: functional.rs
day_five/: Cargo.toml  README.md
day_five/src/: lib.rs  main.rs
day_five/tests/: functional.rs  property.rs
day_four/: Cargo.toml  README.md
day_four/src/: lib.rs  main.rs
day_four/tests/: functional.rs
day_nine/: Cargo.toml  README.md
day_nine/benches/: check_criterion.rs  part2_bench.rs
day_nine/examples/: criterion_runner.rs
day_nine/src/: compressed.rs  lib.rs  main.rs
day_nine/tests/: functional.rs  input.rs
day_one/: Cargo.toml  README.md
day_one/src/: lib.rs  main.rs  solutions.rs  utils.rs
day_seven/: Cargo.toml  README.md
day_seven/src/: lib.rs  main.rs
day_seven/tests/: functional.rs
day_six/: Cargo.toml  README.md
day_six/src/: lib.rs  main.rs  part_one.rs  part_two.rs  worksheet.rs
day_six/tests/: part_two.rs  worksheet.rs
day_ten/: Cargo.toml  README.md
day_ten/src/: indicator_presses.rs  joltage_presses.rs  lib.rs  main.rs
day_ten/tests/: functional.rs
day_three/: Cargo.toml  README.md
day_three/src/: lib.rs  (+1 more)
day_twelve/: Cargo.toml
day_two/: Cargo.toml  README.md
docs/: index.html
(+82 files in other folders)
